# unicode

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
docs/: index.md  resources.md
docs/01-basics/: article.md  examples.js  examples.py
docs/02-ucd-files/: article.md  examples.py
docs/03-encodings/: article.md  examples.js  examples.py
docs/04-grapheme-clusters/: article.md
docs/04-normalization/: article.md  examples.js  examples.py
docs/05-collation/: article.md  examples.js  examples.py
docs/05-normalization/: article.md
docs/06-collation/: article.md
docs/06-linux-tools/: article.md  examples.py
docs/07-linux-tools/: article.md
